<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_create_training_main"></string>
    <string name="title_activity_create_training_card"></string>
    <string name="title_activity_ingredients"></string>
    <string name="title_activity_training"></string>
    <string name="title_activity_training_card"></string>
    <string name="last_change">Ostatnia zmiana</string>
    <string name="app_name">Gotowanko</string>
    <string name="add_training">Dodaj przepis</string>
    <string name="titleTextView">Tytuł</string>
    <string name="image">Obrazek</string>
    <string name="create_card">Stwórz kartę</string>
    <string name="title">Tytuł</string>
    <string name="_0_">"(0) "</string>
    <string name="right_arrow">></string>
    <string name="left_arrow">&lt;</string>
    <string name="kg">KG</string>
    <string name="ok">ok</string>
    <string name="lista">lista</string>
    <string name="start_training">Realizuj przepis</string>
    <string name="needed_ingredients">Potrzebne składniki</string>
    <string name="blob">blob</string>
    <string name="search">Szukaj</string>
    <string name="search_dots">Szukaj...</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="title_not_set">Brak tytułu</string>
    <string name="training_need_title">Aby zapisać przepis, trzeba mu nadać tytuł</string>
    <string name="cancel">Anuluj</string>
    <string name="do_you_wish_to_save">Czy chcesz zapisać?</string>
    <string name="recipe_not_saved">Przepis nie został zapisany</string>
    <string name="recipe_title_dots">Tytuł przepisu...</string>
    <string name="add_ingredients">Dodaj składniki</string>
    <string name="card_title_dots">Tytuł karty...</string>
    <string name="card_descrption">Opis kroku...</string>
    <string name="left">lewo</string>
    <string name="right">prawo</string>
    <string name="set_ingredients">Ustaw składniki</string>
    <string name="ingredient">składnik</string>
    <string name="cards_missing">Brak kart</string>
    <string name="atleast_one_card_needed">Przepis powinien zawierać conajmniej jedną kartę</string>
    <string name="fill_title_before_creating_next_card">Uzupełnij tytuł zanim przejdziesz do tworzenia następnej karty</string>
    <string name="title_missing">Brak tytułu</string>
    <string name="save">Zapisz</string>
    <string name="edit">Zmień</string>
    <string name="delete">Usuń</string>
    <string name="recipe_deletation">Usuwanie przepisu</string>
    <string name="do_you_realy_want_remove_recipe">Czy napewno chcesz usunąć przepis?</string>
    <string name="strawberry">truskawka</string>
    <string name="chilis">czili</string>
    <string name="carrot">marchewka</string>
    <string name="apples">jabłka</string>
    <string name="bread">chleb</string>
    <string name="chicken">kurczak</string>
    <string name="fish">ryba</string>
    <string name="steak">stek</string>
    <string name="sausage">kurczak</string>
    <string name="turkey">indyk</string>
    <string name="ham">szynka</string>
    <string name="meat">mięso</string>
    <string name="vegetables">warzywa</string>
    <string name="fruits">owoce</string>
    <string name="drinks">napoje</string>
    <string name="pumpkin">dynia</string>
    <string name="tea">herbata</string>
    <string name="cherries">wiśnie</string>
    <string name="grapes">winogrona</string>
    <string name="watermelon">arbuz</string>
    <string name="beer">piwo</string>
    <string name="rice">ryż</string>
    <string name="cafe">kawa</string>
    <string name="bananas">banany</string>
    <string name="cheese">ser</string>
    <string name="onion">cebula</string>
    <string name="eggs">jajka</string>
    <string name="butter">masło</string>
    <string name="done">Zrobione</string>
    <string name="choosen_ingredients_were_not_saved">Wybrane składniki nie zostały zapisane</string>
    <string name="save_changes">Zapisać zmiany?</string>
    <string name="choose_quantity">Wybierz ilość</string>
    <string name="slash">/</string>

</resources>