<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginMedium"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/cardsNavWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/create_cards_nav" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardsNavWrapper"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginExtraLarge"
            android:text="@string/titleTextView"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginExtraLarge"
            android:hint="@string/recipe_title_dots"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginExtraLarge"
            android:clickable="true"
            android:contentDescription="@string/image"
            android:src="@drawable/noimage" />
    </LinearLayout>

</RelativeLayout>